--- a/chart.html
+++ b/chart.html
@@ -6,7 +6,7 @@
     <title>Stock | Visualize</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <div id="chart"></div>
+    <script type="module" src="/src/chart.js"></script>
   </body>
 </html>
